<?xml version="1.0"?>
<package format="2">
    <name>rosbag_info_plotter</name>
    <version>0.1.0</version>
    <description>Simple tool to plot rosbag contents</description>

    <maintainer email="exodaniel@gmail.com">Daniel Dugas</maintainer>

    <license>MIT</license>

    <author email="exodaniel@gmail.com">Daniel Dugas</author>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>python-numpy</exec_depend>
    <exec_depend>python-tqdm</exec_depend>
    <exec_depend>python-matplotlib</exec_depend>

</package>
